fix(theme): no-sidebar page‘s h1 header is too narrow (close: #50)

--- a/packages/vuepress-theme-vt/styles/index.styl
+++ b/packages/vuepress-theme-vt/styles/index.styl
@@ -237,7 +237,7 @@ table {
 
       .theme-default-content {
         margin: 0 auto;
-        padding: 0;
+        padding: 2rem 0;
       }
 
       .page-edit, .page-nav {
